ajustes para build
