# src/main/resources/static/openapi.yaml
@@ -106,6 +106,69 @@ components:
         newPassword:
           type: string
 
+    PageUserResponseDTO:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/UserResponseDTO'
+        pageable:
+          type: object
+          properties:
+            sort:
+              type: object
+              properties:
+                sorted:
+                  type: boolean
+                unsorted:
+                  type: boolean
+                empty:
+                  type: boolean
+            offset:
+              type: integer
+              format: int64
+            pageNumber:
+              type: integer
+              format: int32
+            pageSize:
+              type: integer
+              format: int32
+            paged:
+              type: boolean
+            unpaged:
+              type: boolean
+        last:
+          type: boolean
+        totalPages:
+          type: integer
+          format: int32
+        totalElements:
+          type: integer
+          format: int64
+        size:
+          type: integer
+          format: int32
+        number:
+          type: integer
+          format: int32
+        sort:
+          type: object
+          properties:
+            sorted:
+              type: boolean
+            unsorted:
+              type: boolean
+            empty:
+              type: boolean
+        first:
+          type: boolean
+        numberOfElements:
+          type: integer
+          format: int32
+        empty:
+          type: boolean
+
 paths:
   /v1/auth/login:
     post:
@@ -152,24 +215,45 @@ paths:
     get:
       tags:
         - User Management
-      summary: Search users by name
+      summary: Search users by name with pagination
       security:
         - bearerAuth: []
       parameters:
         - name: name
           in: query
-          required: true
+          required: false # Alterado para false
           schema:
             type: string
+          description: Part of the user's name to search for. If empty or not provided, all users will be returned.
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 0
+          description: Page number (0-indexed).
+        - name: size
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 10 # Definido como 10, conforme @PageableDefault
+          description: Number of records per page.
+        - name: sort
+          in: query
+          required: false
+          schema:
+            type: string
+          description: Sorting criteria in the format 'property,(asc|desc)'. Default sort is by ID. Example: 'name,asc'.
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/UserResponseDTO'
+                $ref: '#/components/schemas/PageUserResponseDTO' # Alterado para PageUserResponseDTO
 
   /v1/users/{id}:
     put:
